# bundleiq

./: .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  nixpacks.toml  railway.toml
frontend/: index.html  package.json
frontend/src/: App.jsx
logs/: lifecycle.jsonl
src/: config.rs  main.rs
src/agent/: failure.rs  mod.rs  timing.rs  tip.rs
src/bundle/: mod.rs
src/lifecycle/: mod.rs
src/streaming/: mod.rs
