[package]
name = "bundleiq"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bundleiq"
path = "src/main.rs"

[dependencies]
# Solana
solana-client = "1.18"
solana-sdk = "1.18"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client (for Jito + OpenAI)
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Environment variables
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Errors
anyhow = "1"

[profile.release]
opt-level = 3
