[package]
name = "bundleiq"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bundleiq"
path = "src/main.rs"

[[bin]]
name = "keygen"
path = "src/bin/keygen.rs"

[dependencies]
solana-client = "1.18"
solana-sdk = "1.18"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
bincode = "1"
base64 = "0.21"

[profile.release]
opt-level = 3

[dependencies.bs58]
version = "0.5"

[dependencies.actix-web]
version = "4"

[dependencies.actix-cors]
version = "0.7"

[dependencies.tokio-stream]
version = "0.1"
